# capacitor2-fix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build.sh
.github/workflows/: ci.yml
src/: Capacitor2Fix.cpp  Capacitor2Fix.h  Capacitor2FixCIDs.hpp  Capacitor2FixController.cpp  Capacitor2FixController.hpp  Capacitor2FixProc.cpp  Capacitor2FixProcessor.cpp  Capacitor2FixProcessor.hpp  Entry.cpp  LookupTable.cpp  LookupTable.hpp  PluginCIDs.hpp  PluginController.cpp  PluginController.hpp  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.hpp
